# fullnodedev

./: .gitattributes  .gitignore  Cargo.toml  LIST-OPENCL.bat  README-LINUX-MINER-ONLY.txt  README-LINUX-RELEASE.txt  README-MINER-ONLY.txt  README-RELEASE.txt  README.md  SETUP-LINUX.sh  SETUP-MINER.bat  SETUP.bat  START-MINER-PANEL.bat  START-MINER-PANEL.sh
.cargo/: audit.toml  config.toml.example
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
app/: Cargo.toml
app/src/: bench_mainnet_repeat16.rs  block_mining_runtime.rs  cuda_pow.rs  diabider.rs  diaworker.rs  efficiency.rs  gpu_arch.rs  gpu_oom.rs  hash_util.rs  lib.rs  mining_batch.rs  mining_guard.rs  mining_runtime.rs  mining_stats.rs  mining_util.rs  node_api.rs  opencl_common.rs  opencl_dia.rs  opencl_diag.rs  opencl_list.rs  opencl_pow.rs  panel_tuning.rs  poworker.rs  rpc_http.rs  util.rs  version.rs
app/src/opencl_gpu/: block.rs  compile.rs  handle.rs  init.rs  mod.rs  resources.rs
app/tests/: efficiency_test.rs  poworker_cpu_sim.rs  poworker_opencl_sim.rs
basis/src/component/: action.rs
basis/src/config/: engine.rs  server.rs
basis/src/interface/: db.rs  hnoder.rs  state.rs  transaction.rs
basis/src/method/: hybrid_signature.rs  mod.rs
chain/src/: check.rs  impl.rs  state.rs
db/src/: disk_rocksdb.rs  disk_rusty_leveldb.rs  disk_sled.rs
docs/: COMMUNITY-POOL-DESIGN.md  COMMUNITY-REQUIREMENTS.md  JOJOIN-REBUILD.md  MINING-AMD.md  MINING-LINUX.md  MINING-NVIDIA-CUDA.md  POOL-OPERATOR.md  PUBLIC-POOL.md
field/src/: ini.rs  lib.rs
field/src/component/: hybrid_sign.rs
field/src/core/: address.rs  amount.rs
mainnet-configs/: MAINNET-DIAMOND.md
miner-panel/: Cargo.toml
miner-panel/src/: assets.rs  config.rs  connect.rs  currency.rs  dashboard.rs  fleet.rs  fonts.rs  hacash_config.rs  help_options.rs  i18n.rs  main.rs  mining_control.rs  mining_kind.rs  opencl_status.rs  platform.rs  presets.rs  public_pool.rs  stats_poll.rs  theme.rs  ui_dashboard_tab.rs  ui_help_tab.rs  ui_settings.rs  ui_settings_tab.rs
miner-panel/tests/: panel_tuning_integration.rs
miner-pool/: Cargo.toml
miner-pool/src/: config.rs  job.rs  main.rs  rpc_proxy.rs  stratum.rs  upstream.rs
mint/: Cargo.toml
mint/src/: config.rs
mint/src/action/: diamond_mint.rs
mint/src/api/: common.rs  console.rs  create_transfer.rs  diamondminer_success.rs  fee.rs  metrics.rs  miner_pending.rs  mod.rs  routes.rs  submit_transaction.rs  transaction.rs
mint/src/check/: block_build.rs  tx.rs
mint/src/genesis/: reward.rs
node/src/core/: api.rs  metrics.rs  mod.rs  protocol.rs  runtime.rs
pool-spike/: Cargo.toml
pool-spike/src/: asert_check.rs  difficulty.rs  lib.rs  main.rs  miner.rs  payout.rs  pool_core.rs  server.rs  settle.rs
protocol/src/: lib.rs  metrics.rs  params.rs  tests.rs  upgrade.rs
protocol/src/action/: level.rs  mod.rs  reqsign.rs
protocol/src/block/: v1.rs
protocol/src/context/: actcall.rs  context.rs  gas.rs
protocol/src/operate/: hacash.rs
protocol/src/setup/: mod.rs
protocol/src/transaction/: hybrid_util.rs  mod.rs  type3.rs  type4.rs  util.rs
scripts/: _build-and-mine-safe.ps1  _collect-after-mine.ps1  _run-build-and-mine-check.bat  _run-build-and-mine-check.ps1  _run-build-check.ps1  _run-build-only.ps1  _run-full-cycle.ps1  _run-full-cycle2.ps1  _run-full-cycle3.ps1  _run-mining-test.ps1  _start-and-wait.ps1  _start-mining-only.ps1  build-and-mine.ps1  pack-release-linux.sh  pack-release.ps1  run-build-and-mine.bat  run-hacd-test-once.cmd  run-safe-cycle.bat  start-hac-mining.ps1  test-hacd.ps1  verify-mining-presets.sh  wait-and-collect.bat
scripts/mining-amd/: BENCHMARK-AMD.bat  BUILD-AMD-MINER.bat  BUILD-MINER-PANEL.bat  CONFIGURE-MINING.bat  DIAGNOSE-AMD-GPU.bat  DISABLE-AMD-OPENCL-3652.bat  DISABLE-AMD-OPENCL-3652.ps1  FIND-OPENCL-LIB.bat  FIX-DUPLICATE-AMD-OPENCL.bat  GENERATE-MINING-CONFIG.ps1  INSTALL-CONFIGS.bat  INSTALL-OPENCL-SDK.bat  LIST-OPENCL-DEVICES.bat  PACK-RELEASE.bat  PICK-PRESET.bat  PRESETS-INDEX.txt  SETUP.bat  START-AMD-HAC-MINING.bat  START-AMD-HACD-MINING.bat  START-MINER-PANEL.bat  TUNE-AMD-EFFICIENCY.bat  build-amd-miner.sh  build-miner-panel.sh  diagnose-amd-gpu.sh  diaworker.amd.ini.example  install-configs.sh  list-opencl-devices.sh  poworker.amd.ini.example  run-gpu-benchmark.ps1  start-amd-hac-mining.sh  start-amd-hacd-mining.sh  start-miner-panel.sh
scripts/mining-amd/presets/diaworker/: cpu-only-ryzen5.ini  cpu-only-ryzen7.ini  cpu-only-ryzen9.ini  ryzen5-rx6600.ini  ryzen5-rx7600.ini  ryzen7-rx6700xt.ini  ryzen7-rx6800xt.ini  ryzen7-rx7900xt.ini  ryzen7-rx7900xtx.ini  ryzen7-rx9070xt.ini  ryzen9-9950x-rx7900xt.ini  ryzen9-9950x-rx7900xtx.ini  ryzen9-9950x-rx9070xt.ini  ryzen9-rx6800xt.ini  ryzen9-rx7900xt.ini  (+8 more)
scripts/mining-nvidia/: .gitignore  BUILD-CUDA-MINER.bat  COLAB-T4.md  HANDOFF-RTX.md  INSTALL-CUDA-CONFIG.bat  START-CUDA-MINING.bat  TEST-CUDA-GPU.bat  _verify.bat  colab_cuda_smoke.ipynb  colab_cuda_smoke.sh  pack-colab-slim.ps1  poworker.cuda.ini.example
sdk/: Cargo.toml
sdk/js/: hacashsdk.mjs
sdk/src/: account.rs  coin.rs  hybrid.rs  keystore.rs  lib.rs  param.rs  sign.rs
server/src/server/: mod.rs  server.rs
sys/: Cargo.toml
sys/src/: account.rs  config.rs  ini.rs  lib.rs  pqc.rs
testkit/: Cargo.toml
testkit/src/sim/: disk.rs  dualchain.rs  integration.rs  logs.rs  memchain.rs  miner_api.rs  mod.rs  state.rs  tx.rs
tests/: pqc_hybrid_integration.rs  pqc_mempool_metrics_integration.rs  protocol_cross_integration.rs
vm/src/: setup.rs
vm/src/action/: contract.rs  p2sh.rs
vm/src/api/: debug.rs  routes.rs  vm_logs_del.rs
vm/src/field/: state.rs
vm/src/space/: stack.rs
x16rs/: Cargo.toml
x16rs-cuda/: Cargo.toml  build.rs
x16rs-cuda/cuda/: block_miner.cu  ocl_compat.cuh
x16rs-cuda/src/: lib.rs
x16rs-cuda/tests/: genesis_vector.rs
x16rs/opencl/: aes_helper.cl  blake.cl  groestl.cl  hamsi_helper.cl  hamsi_helper_big.cl  keccak.cl  luffa.cl  sha2_512.cl  sha3_256.cl  util.cl  x16rs.cl  x16rs_diamond.cl  x16rs_main.cl
x16rs/src/: diamond.rs  lib.rs
x16rs/tests/: test.rs
(+23 files in other folders)
