[package]
name = "hacash"
default-run = "hacash"
version = "0.4.0"
edition = "2024"

[workspace]
resolver = "2"
members = [
    ".",
    "miner-panel",
    "app",
    "node",
    "chain",
    "server",
    "mint",
    "vm",
    "sdk",
    "testkit",
    "protocol",
    "basis",
    "field",
    "db",
    "sys",
    "x16rs",
    "x16rs-cuda",
    "miner-pool",
    "pool-spike",
]
exclude = [
    "chainv1",
    "chainv2",
    "chainv3",
    "chainv4",
    "node2",
    "node3",
    "node5",
    "next",
]

[dependencies]
x16rs          = {path = "./x16rs"}
sys            = {path = "./sys"}
field          = {path = "./field"}
basis          = {path = "./basis"}
db             = {path = "./db", default-features = false}
protocol       = {path = "./protocol"}
vm             = {path = "./vm"}
chain          = {path = "./chain"}
mint           = {path = "./mint"}
server         = {path = "./server"}
node           = {path = "./node"}
app            = {path = "./app"}
# server = {path = "./server"}
hex = "0.4.3"
serde_json = "1.0"

[dev-dependencies]
testkit        = {path = "./testkit"}

[features]
default = ["db-sled"] #, "ocl"]
ocl = ["app/ocl"]
cuda = ["app/cuda"]
db-sled = ["db/db-sled"]
db-rusty-leveldb = ["db/db-rusty-leveldb"]
db-leveldb-sys = ["db/db-leveldb-sys"]
db-rocksdb = ["db/db-rocksdb"]


[profile.release]
debug = false       # for RUST_BACKTRACE=1 
opt-level = 3       # Optimize for size.
lto = "thin"        # Thin LTO: nearly the perf of fat LTO for this workload
                    # (the hot path is x16rs / GPU kernels, not Rust glue) with far
                    # less memory and no fat-LTO rustc crashes under panic=unwind.
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'unwind'    # Unwind (not abort): a panic in one request/mining thread must
                    # become an error/skip, not kill the whole 24/7 pool or miner.
                    # Handlers wrap panic-prone work in catch_unwind; abort would
                    # make that impossible and turn any panic into full downtime.
strip = true        # Strip symbols from binary

[profile.wasm-release]
inherits = "release"
opt-level = "z"     # Optimize wasm for code size
