[package]
name = "miner-panel"
version = "0.1.0"
edition = "2024"
description = "Simple HAC AMD mining setup and dashboard"

[[bin]]
name = "miner-panel"
path = "src/main.rs"

[dependencies]
eframe = "0.30"
egui = "0.30"
app = { path = "../app" }
field = { path = "../field" }
sys = { path = "../sys" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
getrandom = "0.3.2"

[features]
default = []

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }
