[package]
name = "pool-spike"
version = "0.1.0"
edition = "2024"
description = "P1 feasibility spike: assemble a coinbase-only block off-node with a chosen coinbase and submit via /submit/block"

[[bin]]
name = "pool-spike"
path = "src/main.rs"

[[bin]]
name = "settle-spike"
path = "src/settle.rs"

[[bin]]
name = "pool-server"
path = "src/server.rs"

[[bin]]
name = "test-miner"
path = "src/miner.rs"

[[bin]]
name = "pool-payout"
path = "src/payout.rs"

[dependencies]
field    = { path = "../field" }
basis    = { path = "../basis" }
protocol = { path = "../protocol" }
mint     = { path = "../mint" }
sys      = { path = "../sys" }
x16rs    = { path = "../x16rs" }
reqwest  = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
serde_json = "1.0"
hex = "0.4.3"
getrandom = "0.3.2"
num-bigint = "0.4.6"
# Cross-process advisory file lock: exactly one process may settle a wallet.
fs2 = "0.4.3"
# Encryption at rest for the pool wallet key (same primitives as sdk/keystore).
aes-gcm = { version = "0.10.3", features = ["zeroize"] }
argon2 = "0.5.3"
zeroize = "1.9.0"

[[bin]]
name = "asert-check"
path = "src/asert_check.rs"
