[package]
name = "sdk"
version = "0.1.1"
edition = "2024"


[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
sys            = {path = "../sys"}
field          = {path = "../field"}
basis          = {path = "../basis"}
protocol       = {path = "../protocol"}
hex = "0.4.3"
serde_json = "1.0"
argon2 = "0.5.3"
aes-gcm = "0.10.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "=0.2.100"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }