[package]
name = "x16rs-cuda"
version = "0.1.0"
edition = "2024"
description = "CUDA x16rs block miner kernels for Hacash poworker"
links = "x16rs_cuda"

[dependencies]
x16rs = { path = "../x16rs" }

[build-dependencies]
cc = "1.2"

[dev-dependencies]
hex = "0.4.3"

[features]
default = []
cuda = []